# wasmer-java

./: .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  build.gradle
.github/workflows/: build_publish.yaml  dynamic_libs.yaml  dynamic_libs_reusable.yaml  mac_release.yaml  publish.yaml  release.yaml  release.yml  test.yaml  test.yml
examples/: ImportExample.java  MemoryExample.java  SimpleExample.java  greet.rs  hello_world.rs  memory.rs  node_template_runtime.wasm  test.rs  test.wasm
include/: org_wasmer_Imports.h  org_wasmer_Instance.h  org_wasmer_Native.h  org_wasmer_Util.h
research/: java-host-light-client-high-level-design.md  java-host-research-outcome.md  java-polkadot-host-high-level-design.md  libp2p-kademlia-for-jvm-scope-estimation.md  libp2p-yamux-jvm-scope-estimation.md
src/: exception.rs  imports.rs  instance.rs  lib.rs  memory.rs  module.rs  native.rs  util.rs
src/java/org/wasmer/: Exports.java  Global.java  ImportObject.java  Imports.java  Instance.java  Main.java  Memory.java  MemoryType.java  Module.java  Native.java  Util.java
src/java/org/wasmer/exports/: Function.java
test/org/wasmer/: ImportsTest.java  InstanceTest.java  MemoryTest.java  ModuleTest.java
test/resources/: polkadot_runtime-v9360.compact.compressed.wasm
