[package]
publish = false
name = "wasmer-jni"
version = "1.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasmer = "2.0.0"
wasmer-compiler-cranelift = "2.0.0"
wasmer-engine-universal = "2.0.0"
wasmer-wasi = "2.0.0"
jni = "0.19"
wasmi = { version = "0.20", default-features = false }
